fix: change "server" to "handler"

--- a/docs/key-topics/cloud-infrastructure/api/overview.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview.mdx
@@ -43,21 +43,21 @@ In the following text, we briefly cover how each of the default Webiny applicati
 
 #### 1. Security
 
-Although the Security application does work with multiple identity providers, by default, it works with Amazon Cognito, hence its icon in the lower section of the diagram <diagram-letter>e</diagram-letter>. The identity checks are performed from the GraphQL Server <diagram-letter>C</diagram-letter> and Headless CMS <diagram-letter>D</diagram-letter> Lambda functions.
+Although the Security application does work with multiple identity providers, by default, it works with Amazon Cognito, hence its icon in the lower section of the diagram <diagram-letter>e</diagram-letter>. The identity checks are performed from the GraphQL Handler <diagram-letter>C</diagram-letter> and Headless CMS <diagram-letter>D</diagram-letter> Lambda functions.
 
-With Amazon Cognito, the application also extends the GraphQL schema located on the GraphQL Server <diagram-letter>C</diagram-letter> Lambda function.
+With Amazon Cognito, the application also extends the GraphQL schema located on the GraphQL Handler <diagram-letter>C</diagram-letter> Lambda function.
 
 For storing data, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter>.
 
 #### 2. I18N
 
-The I18N application doesn't bring any additional cloud infrastructure resources. It just expands the GraphQL schema with its own types and resolvers, so we can say only the GraphQL Server <diagram-letter>C</diagram-letter> Lambda function <diagram-letter>C</diagram-letter> gets affected by it.
+The I18N application doesn't bring any additional cloud infrastructure resources. It just expands the GraphQL schema with its own types and resolvers, so we can say only the GraphQL Handler <diagram-letter>C</diagram-letter> Lambda function <diagram-letter>C</diagram-letter> gets affected by it.
 
 For storing data, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter>.
 
 #### 3. File Manager
 
-Besides expanding the GraphQL schema located on the GraphQL Server Lambda function <diagram-letter>c</diagram-letter>, the File Manager application also brings a couple of dedicated Lambda functions. These perform various file-related tasks like uploading, downloading, and also image optimizations. It also brings a single Amazon S3 bucket, in which the files are ultimately stored <diagram-letter>H</diagram-letter>.
+Besides expanding the GraphQL schema located on the GraphQL Handler Lambda function <diagram-letter>c</diagram-letter>, the File Manager application also brings a couple of dedicated Lambda functions. These perform various file-related tasks like uploading, downloading, and also image optimizations. It also brings a single Amazon S3 bucket, in which the files are ultimately stored <diagram-letter>H</diagram-letter>.
 
 For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
 
@@ -69,13 +69,13 @@ For storing data and performing search queries, the application relies on Amazon
 
 #### 5. Form Builder
 
-The Form Builder application doesn't bring any additional cloud infrastructure resources. It just expands the GraphQL schema with its own types and resolvers, so we can say only the GraphQL Server <diagram-letter>C</diagram-letter> Lambda function gets affected by it.
+The Form Builder application doesn't bring any additional cloud infrastructure resources. It just expands the GraphQL schema with its own types and resolvers, so we can say only the GraphQL Handler <diagram-letter>C</diagram-letter> Lambda function gets affected by it.
 
 For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
 
 #### 6. Headless CMS
 
-Besides expanding the GraphQL schema located on the GraphQL Server <diagram-letter>C</diagram-letter> Lambda function, the Headless CMS application also brings an extra Lambda function which is responsible for hosting the dynamic CMS GraphQL Server <diagram-letter>D</diagram-letter>. Note that on the diagram, it is shown "behind" the GraphQL Server <diagram-letter>C</diagram-letter> Lambda function. Check the Headless CMS diagrams for a better overview.
+Besides expanding the GraphQL schema located on the GraphQL Handler <diagram-letter>C</diagram-letter> Lambda function, the Headless CMS application also brings an extra Lambda function which is responsible for hosting the dynamic Headless CMS GraphQL API <diagram-letter>D</diagram-letter>. Note that on the diagram, it is shown "behind" the GraphQL Handler <diagram-letter>C</diagram-letter> Lambda function.
 
 For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
 
