--- a/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
+++ b/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
@@ -1,34 +1,56 @@
 ---
 id: graphql-api
-title: GraphQL API
+title: Headless CMS GraphQL API
 sidebar_label: GraphQL API
-keywords: ["webiny", "monorepo", "workspaces", "packages", "cli", "yarn"]
-description: Learn what are monorepos and what are the benefits this project organization brings.
+keywords: ["webiny", "headless", "cms", "graphql", "api", "locales", "types"]
+description: Learn what is the Headless CMS GraphQL API, what are its main characteristics, and how to access it.
 ---
 
+import CenteredImage from "../../../mdxComponents/centeredImage";
+import securityImage from "./graphql-api/security.png";
+import apiPlaygroundMainMenu from "./graphql-api/api_playground_from_main_menu.png";
+import apiPlayground from "./graphql-api/api-playground.png";
+import apiUrlWebinyCli from "./graphql-api/api-url-webiny-cli.png";
+import apiPlaygroundSwitchLocale from "./graphql-api/api-playground-switch-locale.png";
+
 :::tip What you'll learn
-- how to use the Headless CMS Webiny application's built-in GraphQL API
+
+- what is the Headless CMS GraphQL API
+- what are its main characteristics
+- how to access it
 :::
 
 ## Overview
 
-The Headless CMS Webiny application comes with a fully fledged GraphQL API, which you can use in order to perform GraphQL queries and mutations on the Headless CMS content models and content entries.
+The Headless CMS Webiny application comes with a fully-fledged GraphQL API, which you can use in order to perform GraphQL queries and mutations on Headless CMS content models and content entries.
 
-The easiest way to explore it and try different things is via the API Playground, that's part of the Webiny Administration Area. To access it, simply open the main menu on the left side of the screen, and click on the API Playground:
+The easiest way to explore it and try different things is via the API Playground, which's part of the Webiny Administration Area. To access it, simply open the main menu on the left side of the screen, and click on the API Playground:
 
-![API Playground](./graphql-api/api-playground.png)
+<!-- vale off -->
+
+<img
+  src={require("./graphql-api/api_playground_from_main_menu.png").default}
+  className="no-shadow"
+  alt="Access API Playground via Main Menu"
+/>
+
+<!-- vale on -->
 
 ## Main Characteristics
 
 ### GraphQL API Types
 
-The Headless CMS GraphQL API comes in three different types - **manage**, **preview** and **read**. Each type is served via a separate URL, and has a specific purpose.
+The Headless CMS GraphQL API comes in three different types - **manage**, **preview** and **read**. Each type is served via a separate URL and has a specific purpose.
+
+:::info
+Skip to the [The GraphQL API URL Structure](/docs/key-topics/webiny-applications/headless-cms/graphql-api#the-graphql-api-url-structure) to learn more about the Headless CMS GraphQL API's URL structure.
+:::
 
 #### Manage
 
-The manage GraphQL API is here for management purposes. In other words, it provides the necessary queries and mutations for managing your content models and content entries. It is heavily utilized by the Headless CMS module in the Webiny Administration Area.
+The manage GraphQL API is here for management purposes. In other words, it provides the necessary queries and mutations for managing your content models, groups, and entries. It is heavily utilized by the Headless CMS module in the Webiny Administration Area.
 
-Except the fact that this GraphQL API type allows you to create new and edit and publish existing content entries, another specific aspect of it is that it returns both published and unpublished content entries. This is intentional, because, as a content manager, you need to be able to access all of the data, not just published.
+Except for the fact that this GraphQL API type allows you to create new, and edit and publish existing content entries, another specific aspect of it is that it returns both published and unpublished content entries. This is intentional, because, as a content manager, you need to be able to access all of the data, not just published.
 
 #### Read
 
@@ -36,25 +58,97 @@ Unlike the manage GraphQL API, which is used by content managers, the **read** A
 
 #### Preview
 
-Finally, there is the **preview** GraphQL API type, which is used for previewing purposes. Imagine a website that's only available to the internal team, that wants to see how a particular page or a section of your website will look like, once the content entry is actually published. This internal website is available under a protected URL, and points to the **preview** GraphQL API.
+Finally, there is the **preview** GraphQL API type, which is used for previewing purposes. Imagine a website that's only available to the internal team, that wants to see how a particular page or a section of your website will look like, once a specific content entry is actually published. This internal website is, usually, available under a protected URL, and points to the **preview** GraphQL API.
 
-The GraphQL schema is the same as the one that the **read** GraphQL API represents, except the returned data will also include not-yet published content entries.
+The GraphQL schema is the same as the **read** GraphQL API's, except the returned data also includes not-yet-published content entries.
 
-### Summary
+#### Summary
 
 The following table clearly shows all of the specific characteristics of each Headless CMS GraphQL API type:
 
-| Behaviour                               | Manage              | Read                              | Preview                         |
-| --------------------------------------- | ------------------- | --------------------------------- | ------------------------------- |
-| Mutations on content models and entries | ✅                  | ❌                                | ❌                              |
-| Querying of content entries             | ✅                  | ✅                                | ✅                              |
-| Returns unpublished content             | ✅                  | ❌                                | ✅                              |
-| Usually used in                         | Administration Area | Production Website or Application | Internal Website or Application |
+| Behaviour                                                         | Manage              | Read                              | Preview                         |
+| ----------------------------------------------------------------- | ------------------- | --------------------------------- | ------------------------------- |
+| Allows mutations on <br/>content models, groups,<br/> and entries | ✅                  | ❌                                | ❌                              |
+| Allows performing <br/>queries on content entries                 | ✅                  | ✅                                | ✅                              |
+| Returns unpublished<br/>content entries                           | ✅                  | ❌                                | ✅                              |
+| Usually used in...                                                | Administration Area | Production Website or Application | Internal Website or Application |
 
-### Supports Multiple Locales
+### Multiple Locales Support
+
+Except for the different types, the Headless CMS GraphQL API also supports creating both content models, and entries, in multiple locales. This not only means that you can have your content entries localized for different users, but also that you can design your content models separately for each locale.
+
+For example, you might have a `Personal Document` content model, which for the `en-GB` locale, consists of three fields, and for the `en-US`, only two. Or, you can have the same fields in both, but different input data validation rules defined for each field.
+
+Overall, this brings additional flexibility when designing your content models for different locales.
 
 ### Secure
 
+The Headless CMS GraphQL API sits behind a security layer that provides fine-grain access control, both for logged-in, and anonymous users. The following are some of the available options:
+
+- allow users to access content on all, or only specific locales
+- allow users to access only specific Headless CMS GraphQL API types (**manage**, **read**, **preview**)
+- allow users to access only specific content models, groups, and entries
+
+<CenteredImage alt="Fine Grain Access Controls" src={securityImage} />
+
 ## The GraphQL API URL Structure
 
+The Headless CMS GraphQL API is accessed via multiple URL endpoints, each including the GraphQL API type and locale. This is because different combinations of the two yield different GraphQL schemas.
+
+For example, the **read** GraphQL API only allows users to perform queries on different content entries. On the other hand, not only the **manage** type allows querying content entries, but also content models and groups, and of course, provides the necessary management-related mutation operations. Finally, different locales can have different content models, which, again, means a different GraphQL schema needs to be in place.
+
+The following shows how the Headless CMS GraphQL API URL is structured:
+
+```
+https://{yourApiDomain}/cms/{type}/{locale}
+```
+
+Note that the Headless CMS GraphQL API is deployed as part of your **API** project application, hence the `yourApiDomain` piece in the URL. A couple of real-world examples:
+
+```bash
+# Access "manage" GraphQL API, for the `en-US` locale.
+https://random-id-xyz.cloudfront.net/cms/manage/en-US
+
+# Access "read" GraphQL API, for the `de-DE` locale.
+https://random-id-xyz.cloudfront.net/cms/read/de-DE
+
+# Access "preview" GraphQL API, for the `it-IT` locale.
+https://random-id-xyz.cloudfront.net/cms/read/it-IT
+```
+
+:::info
+To learn more about the cloud infrastructure deployed as part of the **API** project application, check out the [Cloud Infrastructure - API](/docs/key-topics/cloud-infrastructure/api/introduction) key topic. You can also skip to the [API Overview](/docs/key-topics/cloud-infrastructure/api/overview#6-headless-cms) section, to immediately see how the Headless CMS GraphQL API fits in.
+:::
+
+### Where to Find the URL of the GraphQL API?
+
+You can find the URL of the Headless CMS GraphQL API via one of the following two ways.
+
+#### API Playground
+
+When you access the API Playground via the main menu in the Administration Area, at the top of the screen, in the URL bar, you will be able to see the URL for all three Headless CMS GraphQL API types.
+
+<CenteredImage alt="API Playground" src={apiPlayground} />
+
+Note that if you want to access content in different locales, you can switch to a different one via the locale selector, located in the top right corner of the screen.
+
+<CenteredImage alt="API Playground" src={apiPlaygroundSwitchLocale} />
+
+#### Webiny CLI
+
+The [Webiny CLI](/docs/key-topics/webiny-cli) offers the `info` command, which will, among other useful information, also return the URLs for all three CMS GraphQL API types. The command is run from your project root, like so:
+
+```bash
+# Returns information for the "dev" environment.
+yarn webiny info --env dev
+```
+
+Running the shown command should produce the following output:
+
+<CenteredImage alt="Find Headless CMS GraphQL API URLs via Webiny CLI" src={apiUrlWebinyCli} />
+
 ## FAQ
+
+#### When using the API Playground, is my access limit in any way?
+
+You can only access content models, groups, and entries to which you have access, which is based on the security group your account belongs to.
