--- a/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
+++ b/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
@@ -132,7 +132,7 @@ When you access the API Playground via the main menu in the Administration Area,
 
 Note that if you want to access content in different locales, you can switch to a different one via the locale selector, located in the top right corner of the screen.
 
-<CenteredImage alt="API Playground" src={apiPlaygroundSwitchLocale} />
+<CenteredImage alt="Switch Locale via the Locale Selector" src={apiPlaygroundSwitchLocale} />
 
 #### Webiny CLI
 
