fix: add minor additional explanations

--- a/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
+++ b/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
@@ -36,6 +36,10 @@ The easiest way to explore it and try different things is via the API Playground
 
 <!-- vale on -->
 
+:::info
+If you want to learn how to use the Headless CMS GraphQL API via the built-in API Playground or programmatically, via a GraphQL client, make sure to check out the [Using the GraphQL API](/docs/how-to-guides/headless-cms/using-graphql-api) guide.
+:::
+
 ## Main Characteristics
 
 ### GraphQL API Types
@@ -93,7 +97,7 @@ The Headless CMS GraphQL API sits behind a security layer that provides fine-gra
 
 ## The GraphQL API URL Structure
 
-The Headless CMS GraphQL API is accessed via multiple URL endpoints, each including the GraphQL API type and locale. This is because different combinations of the two yield different GraphQL schemas.
+The Headless CMS GraphQL API is accessed via multiple URL endpoints, each including the GraphQL API type and locale. This is simply because different combinations of the two yield different GraphQL schemas.
 
 For example, the **read** GraphQL API only allows users to perform queries on different content entries. On the other hand, not only the **manage** type allows querying content entries, but also content models and groups, and of course, provides the necessary management-related mutation operations. Finally, different locales can have different content models, which, again, means a different GraphQL schema needs to be in place.
 
@@ -134,6 +138,10 @@ Note that if you want to access content in different locales, you can switch to 
 
 <CenteredImage alt="Switch Locale via the Locale Selector" src={apiPlaygroundSwitchLocale} />
 
+:::info
+The locale selector is not visible for systems that have only one active locale.
+:::
+
 #### Webiny CLI
 
 The [Webiny CLI](/docs/key-topics/webiny-cli) offers the `info` command, which will, among other useful information, also return the URLs for all three CMS GraphQL API types. The command is run from your project root, like so:
@@ -151,4 +159,4 @@ Running the shown command should produce the following output:
 
 #### When using the API Playground, is my access limit in any way?
 
-You can only access content models, groups, and entries to which you have access, which is based on the security group your account belongs to.
+You can only access content models, groups, and entries to which you have access, which is based on the security group your account belongs to. To learn more, visit the [Using the GraphQL API](/docs/how-to-guides/headless-cms/using-graphql-api) guide.
