--- a/docs/how-to-guides/headless-cms/using-graphql-api.mdx
+++ b/docs/how-to-guides/headless-cms/using-graphql-api.mdx
@@ -6,27 +6,56 @@ keywords: ["webiny", "cms", "graphql", "api"]
 description: Learn how to use the Headless CMS's built-in GraphQL API.
 ---
 
-import apiPlaygroundImage from "./using-graphql-api/api-playground.png";
+import CenteredImage from "../../mdxComponents/centeredImage";
+import apiPlaygroundSwitchLocale from "./using-graphql-api/api-playground-switch-locale.png";
 
 
 :::tip What you'll learn
 - how to use the Headless CMS Webiny application's built-in GraphQL API
 :::
 
+## Overview
+
+The Headless CMS Webiny application comes with a fully-fledged GraphQL API, which you can use in order to perform GraphQL queries and mutations on Headless CMS content models and content entries.
+
+:::info
+To learn more about the Headless CMS GraphQL API and its main characteristics, make sure to check out the [Headless CMS GraphQL API](/docs/key-topics/webiny-applications/headless-cms/graphql-api) key topic.
+:::
+
 ## API Playground
 
-The Headless CMS Webiny application comes with a fully fledged GraphQL API, which you can use in order to perform various operations and queries on the Headless CMS content models and content entries.
+The easiest way to explore Headless CMS GraphQL API and try different things is via the API Playground, which's part of the Webiny Administration Area. To access it, simply open the main menu on the left side of the screen, and click on the API Playground:
 
-The easiest way to explore it and try different things is via the API Playground, that's part of the Webiny Administration Area. To access it, simply open the main menu on the left side of the screen, and click on the API Playground:
+<!-- vale off -->
 
-![API Playground](./using-graphql-api/api-playground.png)
+<img
+  src={require("./using-graphql-api/api_playground_from_main_menu.png").default}
+  className="no-shadow"
+  alt="Access API Playground via Main Menu"
+/>
 
-The main advantage of this approach is that you already have all of the relevant GraphQL API URLs and authentication set up, so you don't need to set these manually.
+<!-- vale on -->
+
+
+The API Playground enables you to easily access all three Headless CMS GraphQL API types (**read**, **manage**, **preview**). You can also access content in different locales, by switching to a different locale via the locale selector, located in the top right corner of the screen.
+
+<CenteredImage alt="Switch Locale via the Locale Selector" src={apiPlaygroundSwitchLocale} />
+
+:::info
+Note that the locale selector is not visible for systems that have only one active locale.
+:::
 
 ## Programmatic Access
 
-Except for the API Playground, the GraphQL API can also be accessed programmatically, via a GraphQL client or a library of your choice. Some of the examples are [Apollo GraphQL](https://www.apollographql.com/docs/react/), [URQL](https://formidable.com/open-source/urql/), and [graphql-request](https://www.npmjs.com/package/graphql-request).
+### GraphQL Client
+Except for the API Playground, the Headless CMS GraphQL API can also be accessed programmatically, via a GraphQL client or a library of your choice. Some of the common clients out there are [Apollo GraphQL](https://www.apollographql.com/docs/react/), [URQL](https://formidable.com/open-source/urql/), and [graphql-request](https://www.npmjs.com/package/graphql-request).
 
-The first step is to decide with which type of the GraphQL API you wish to interact with (manage, read, or preview), and with for which locale. These two parameters affect the complete URL you'll need to point your GraphQL to.
+### Headless CMS GraphQL API URL
+Once you have your GraphQL client set up and ready to go, we first need to retrieve the correct Headless CMS GraphQL API URL, which can be done either via the API Playground or via the [Webiny CLI](/docs/key-topics/webiny-cli).
 
-In terms of the actual URL, you can retrieve it either via the API Playground shown above,
+:::info
+Note that the exact URL is different for different combinations of Headless CMS GraphQL API types and locales. To learn more about the structure of the Headless CMS GraphQL API URL and how to retrieve it, please check out the [Headless CMS GraphQL API URL](/docs/key-topics/webiny-applications/headless-cms/graphql-api#the-graphql-api-url-structure) key topic.
+:::
+
+###
+Finally, because the GraphQL API sits behind a security layer, we also need to create an API key, with an appropriate Security Group tied to it.
