doc: fix the math

--- a/docs/how-to-guides/headless-cms/create-a-content-model-form-layout.mdx
+++ b/docs/how-to-guides/headless-cms/create-a-content-model-form-layout.mdx
@@ -121,7 +121,7 @@ You can see the `Recipe` tab is hidden. That's because we don't have the necessa
 
 ## Custom UI Elements
 
-Using form data you can also render other UI elements, or even show/hide fields depending on the value of some other field:
+Using form data you can also render other UI elements, or even show/hide fields depending on the value of some other field. In the following example, we show a warning if the price is less than `20` and number of ingredients is greater than `6`:
 
 ```tsx {3,8,13,18-27} title="pizzaLayout.tsx"
 import React from "react";
@@ -146,7 +146,7 @@ const PizzaLayout = ({ fields, data }) => {
             <Cell span={12}>
               <Alert type={"warning"} title={"Please double-check your input"}>
                 The price of <strong>{data.price}</strong> seems too low for a pizza with over{" "}
-                <strong>7</strong> ingredients.
+                <strong>6</strong> ingredients.
               </Alert>
             </Cell>
           </Grid>
