fix: reword sentences

--- a/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
+++ b/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
@@ -157,6 +157,6 @@ Running the shown command should produce the following output:
 
 ## FAQ
 
-#### When using the API Playground, is my access limit in any way?
+#### When using the API Playground, is my access limited in any way?
 
-You can only access content models, groups, and entries to which you have access, which is based on the security group your account belongs to. To learn more, visit the [Using the GraphQL API](/docs/how-to-guides/headless-cms/using-graphql-api) guide.
+You can only access content models, groups, and entries to which you have access, which is based on the security group your user account belongs to. To learn more about how to use the Headless CMS GraphQL API, visit the [Using the GraphQL API](/docs/how-to-guides/headless-cms/using-graphql-api) guide.
