fix: reorder `install` and `build` steps

--- a/docs/tutorials/create-a-package-in-monorepo.mdx
+++ b/docs/tutorials/create-a-package-in-monorepo.mdx
@@ -399,8 +399,20 @@ It contains information that is commonly required to understand what the project
 ## Preparing the Package for Usage
 Now that we've created our package and added the required configuration files, it is time to use it.
 To do that we need to take the following steps:
+- `install` the package
 - `build` the package
-- `link` the package
+
+### Install the Package
+Now that we have all the files in place, it is time to install and link the package.
+Run the following command from the root of your project:
+```
+yarn install
+```
+Running this command will do two things:
+1. install the package dependencies.
+2. link the package via [`postinstall`](https://github.com/webiny/webiny-examples/blob/master/create-package-in-monorepo/package.json#L64) hook we run
+[`link-workspaces`](https://github.com/webiny/webiny-examples/blob/master/create-package-in-monorepo/scripts/linkWorkspaces.js) script.
+
 
 ### Build the Package
 To use the package we need to `build` it first.
@@ -437,15 +449,6 @@ yarn webiny ws run build --folder packages
 The `ws run` command executes the command in question for every workspace present in the folder.
 In our case, `packages/greeting`.
 :::
-
-### Install the Package
-Now that we've built the package. It's time to install and link the package.
-Run the following command from the root of your project:
-```
-yarn install
-```
-By simply executing the above-mentioned command. The package is installed and linked via workspaces.
-Because using [`postinstall`](https://github.com/webiny/webiny-examples/blob/master/iframe-page-element/package.json#L64) hook we also run [`link-workspaces`](https://github.com/webiny/webiny-examples/blob/master/iframe-page-element/scripts/linkWorkspaces.js) script.
 
 ### Using the Package in Apps
 
