feat: add Headless CMS GraphQL API topic

--- a/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
+++ b/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
@@ -22,7 +22,8 @@ import apiPlaygroundSwitchLocale from "./graphql-api/api-playground-switch-local
 
 ## Overview
 
-The Headless CMS Webiny application comes with a fully-fledged GraphQL API, which you can use in order to perform GraphQL queries and mutations on Headless CMS content models and content entries.
+The Headless CMS Webiny application comes with a fully-fledged GraphQL API, which you use in order to perform GraphQL queries and mutations on Headless CMS content models, groups, and entries.
+
 
 The easiest way to explore it and try different things is via the API Playground, which's part of the Webiny Administration Area. To access it, simply open the main menu on the left side of the screen, and click on the API Playground:
 
@@ -31,6 +32,7 @@ The easiest way to explore it and try different things is via the API Playground
 <img
   src={require("./graphql-api/api_playground_from_main_menu.png").default}
   className="no-shadow"
+  title="Access API Playground via Main Menu"
   alt="Access API Playground via Main Menu"
 />
 
@@ -62,7 +64,7 @@ Unlike the manage GraphQL API, which is used by content managers, the **read** A
 
 #### Preview
 
-Finally, there is the **preview** GraphQL API type, which is used for previewing purposes. Imagine a website that's only available to the internal team, that wants to see how a particular page or a section of your website will look like, once a specific content entry is actually published. This internal website is, usually, available under a protected URL, and points to the **preview** GraphQL API.
+Finally, there is the **preview** GraphQL API type, which is used for previewing purposes. Imagine a website that's only available to the internal team, that wants to see how a particular page or a section of your website will look like, once a specific content entry is actually published. This internal website is, usually, available under a protected URL, and should always interact with the **preview** GraphQL API.
 
 The GraphQL schema is the same as the **read** GraphQL API's, except the returned data also includes not-yet-published content entries.
 
@@ -87,13 +89,13 @@ Overall, this brings additional flexibility when designing your content models f
 
 ### Secure
 
-The Headless CMS GraphQL API sits behind a security layer that provides fine-grain access control, both for logged-in, and anonymous users. The following are some of the available options:
+The Headless CMS GraphQL API sits behind a security layer that provides fine-grained access control, both for logged-in, and anonymous users. The following are some of the available options:
 
 - allow users to access content on all, or only specific locales
 - allow users to access only specific Headless CMS GraphQL API types (**manage**, **read**, **preview**)
 - allow users to access only specific content models, groups, and entries
 
-<CenteredImage alt="Fine Grain Access Controls" src={securityImage} />
+<CenteredImage alt="Fine-grained Access Controls" src={securityImage} />
 
 ## The GraphQL API URL Structure
 
@@ -134,7 +136,7 @@ When you access the API Playground via the main menu in the Administration Area,
 
 <CenteredImage alt="API Playground" src={apiPlayground} />
 
-Note that if you want to access content in different locales, you can switch to a different one via the locale selector, located in the top right corner of the screen.
+Note that if you want to retrieve the URL for a different locale, you can switch to a different one via the locale selector, located in the top right corner of the screen.
 
 <CenteredImage alt="Switch Locale via the Locale Selector" src={apiPlaygroundSwitchLocale} />
 
@@ -154,6 +156,19 @@ yarn webiny info --env dev
 Running the shown command should produce the following output:
 
 <CenteredImage alt="Find Headless CMS GraphQL API URLs via Webiny CLI" src={apiUrlWebinyCli} />
+
+Note that with this method, you will still need to manually replace the `{LOCALE_CODE}` with an actual locale code. A list of all available locales can be found in the Administration Area, in the **Locales** section of the I18N Webiny application.
+
+<!-- vale off -->
+
+<img
+  src={require("./graphql-api/i18n-locales-section.png").default}
+  className="no-shadow"
+  alt="Webiny I18N Application - Locales Section"
+  title="Webiny I18N Application - Locales Section"
+/>
+
+<!-- vale on -->
 
 ## FAQ
 
