fix: correct abbreviations

--- a/docs/key-topics/cloud-infrastructure/api/introduction.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/introduction.mdx
@@ -27,7 +27,7 @@ Of course, the application can additionally grow in terms of code and cloud infr
 
 Note that the cloud infrastructure, defined within the **API** project application, is defined as two different setups - **development** and **production**.
 
-This is simply because, for development purposes, not all of the production cloud infrastructure resources are needed. For example, for improved security posture, the production setup will deploy all of your Lambda functions into a custom [Virtual Private Network (VPC)](https://aws.amazon.com/vpc/) with private subnets. It will also deploy your [Amazon Elastic Search Service](https://aws.amazon.com/elasticsearch-service/) into multiple availability zones (AZs), in order to provide high availability.
+This is simply because, for development purposes, not all of the production cloud infrastructure resources are needed. For example, for improved security posture, the production setup will deploy all of your Lambda functions into a custom [Virtual Private Cloud (VPC)](https://aws.amazon.com/vpc/) with private subnets. It will also deploy your [Amazon Elastic Search Service](https://aws.amazon.com/elasticsearch-service/) into multiple availability zones (AZs), in order to provide high availability.
 
 :::info
 Both setups can be found inside of the **API** project application's folder:
