--- a/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom.mdx
@@ -30,7 +30,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
 
 As mentioned in the [introduction](/docs/key-topics/cloud-infrastructure/api/introduction) section, the **API** project application's cloud infrastructure comes with two setups - development and production. The difference between the two is a bit different setup when it comes to networking and Amazon ElasticSearch Service. In the production setup, these are configured a bit differently, mainly for improving your project's security posture and availability.
 
-Unlike in the development setup, where your project is deployed into the default VPC, in the production setup, your project is deployed into a custom Virtual Private Network (VPC), which we cover in this section.
+Unlike in the development setup, where your project is deployed into the default VPC, in the production setup, your project is deployed into a custom Virtual Private Cloud (VPC), which we cover in this section.
 
 Note that the VPC setup presented here is a good foundation, but is not an ultimate solution. There is a chance that the setup might need additional cloud infrastructure resources or different configurations on your or your organization's behalf.
 
