--- a/docs/key-topics/cloud-infrastructure/api/overview-vpc-default.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview-vpc-default.mdx
@@ -30,7 +30,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
 
 As mentioned in the [introduction](/docs/key-topics/cloud-infrastructure/api/introduction) section, the **API** project application's cloud infrastructure comes with two setups - development and production. The difference between the two is a bit different setup when it comes to networking and Amazon ElasticSearch Service. In the production setup, these are configured a bit differently, mainly for improving your project's security posture and availability.
 
-In the development setup, your project is deployed into the default Virtual Private Network (VPC), which is automatically created for every AWS Account.
+In the development setup, your project is deployed into the default Virtual Private Cloud (VPC), which is automatically created for every AWS Account.
 
 :::info
 Virtual Private Clouds (VPCs) is a topic that requires some general networking knowledge and knowledge on AWS-specific concepts like regions, availability zones, different network gateways, and so on. Be sure to [read about it](https://aws.amazon.com/vpc/) before going through this section.
