fix: update metadata

--- a/docs/how-to-guides/headless-cms/using-graphql-api.mdx
+++ b/docs/how-to-guides/headless-cms/using-graphql-api.mdx
@@ -2,7 +2,7 @@
 id: using-graphql-api
 title: Using the GraphQL API
 sidebar_label: Using the GraphQL API
-keywords: ["webiny", "cms", "graphql", "api"]
+keywords: ["webiny", "headless", "cms", "graphql", "api"]
 description: Learn how to use the Headless CMS's built-in GraphQL API.
 ---
 
