--- a/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
+++ b/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
@@ -2,7 +2,7 @@
 id: graphql-api
 title: Headless CMS GraphQL API
 sidebar_label: GraphQL API
-keywords: ["webiny", "headless", "cms", "graphql", "api", "locales", "types"]
+keywords: ["webiny", "headless", "cms", "graphql", "api", "locales", "types", "security"]
 description: Learn what is the Headless CMS GraphQL API, what are its main characteristics, and how to access it.
 ---
 
