--- a/docs/contributing/new-page-template.mdx
+++ b/docs/contributing/new-page-template.mdx
@@ -27,6 +27,12 @@ description: { description - max 200 chars }
 - how to deploy it to your [AWS](https://aws.amazon.com/) account
 :::
 
+<!-- Include this when needed (e.g. when explaining a feature that was introduced in a specific Webiny version) -->
+:::info Can I Use This?
+This feature is available since Webiny **v5.1.0**.
+:::
+
+
 ## Feature or Use Case Name
 
 <!--If you are writing about a use case, start with a verb,
