fix: update "what you'll learn" section

--- a/docs/how-to-guides/headless-cms/using-graphql-api.mdx
+++ b/docs/how-to-guides/headless-cms/using-graphql-api.mdx
@@ -12,7 +12,8 @@ import securityApiKeys from "./using-graphql-api/security-api-keys.png";
 import securityApiKeysForm from "./using-graphql-api/security-api-keys-form.png";
 
 :::tip What you'll learn
-- how to use the Headless CMS Webiny application's built-in GraphQL API
+- how to use the Headless CMS GraphQL API
+- how to create an API key for programmatic use
 :::
 
 ## Overview
