fix: break sentence into two sentences

--- a/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
+++ b/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
@@ -101,7 +101,7 @@ The Headless CMS GraphQL API sits behind a security layer that provides fine-gra
 
 The Headless CMS GraphQL API is accessed via multiple URL endpoints, each including the GraphQL API type and locale. This is simply because different combinations of the two yield different GraphQL schemas.
 
-For example, the **read** GraphQL API only allows users to perform queries on different content entries. On the other hand, not only the **manage** type allows querying content entries, but also content models and groups, and of course, provides the necessary management-related mutation operations. Finally, different locales can have different content models, which, again, means a different GraphQL schema needs to be in place.
+For example, the **read** GraphQL API only allows users to perform queries on different content entries. On the other hand, not only the **manage** type allows querying content entries, but also content models, and groups. Furthermore, it also provides the necessary management-related mutation operations. Finally, different locales can have different content models, which, again, means a different GraphQL schema needs to be in place.
 
 The following shows how the Headless CMS GraphQL API URL is structured:
 
