fix: remove title case

--- a/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
+++ b/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
@@ -77,7 +77,7 @@ The following table clearly shows all of the specific characteristics of each He
 | Allows mutations on <br/>content models, groups,<br/> and entries | ✅                  | ❌                                | ❌                              |
 | Allows performing <br/>queries on content entries                 | ✅                  | ✅                                | ✅                              |
 | Returns unpublished<br/>content entries                           | ✅                  | ❌                                | ✅                              |
-| Usually used in...                                                | Administration Area | Production Website or Application | Internal Website or Application |
+| Usually used in...                                                | Administration area | Production website or application | Internal website or application |
 
 ### Multiple Locales Support
 
