--- a/docs/how-to-guides/upgrade-webiny/5.0.0-to-5.1.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.0.0-to-5.1.0.mdx
@@ -1,16 +1,16 @@
 ---
-id: 5.0.0-to-5.0.1
-title: 5.0.0 to 5.0.1
-sidebar_label: 5.0.0 to 5.0.1
-keywords: ["webiny", "version", "upgrade", "5.0.0", "5.0.1"]
-description: Learn how to upgrade Webiny from 5.0.0 to 5.0.1.
+id: 5.0.0-to-5.1.0
+title: 5.0.0 to 5.1.0
+sidebar_label: 5.0.0 to 5.1.0
+keywords: ["webiny", "version", "upgrade", "5.0.0", "5.1.0"]
+description: Learn how to upgrade Webiny from 5.0.0 to 5.1.0.
 ---
 
 import CenteredImage from "../../mdxComponents/centeredImage";
 
 :::tip What you’ll learn
 
-- how to upgrade Webiny from 5.0.0 to 5.0.1
+- how to upgrade Webiny from 5.0.0 to 5.1.0
 
 :::
 
@@ -31,40 +31,37 @@ Read more about it in our [Cloud Infrastructure](/docs/key-topics/cloud-infrastr
 
 :::
 
-### Add Missing Private Subnet For the ElasticSearch Cluster
+### Add Missing Private Subnet for the ElasticSearch Cluster
 
 Open your [`api/pulumi/prod/elasticSearch.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/elasticSearch.ts) file, and on [line 26](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/elasticSearch.ts#L26), add the `vpc.subnets.private[1].id` subnet to the `subnetIds` array:
 
 ```ts title="api/pulumi/prod/elasticSearch.ts" {14}
-this.domain = new aws.elasticsearch.Domain(
-  domainName,
-  {
-    elasticsearchVersion: "7.7",
-    clusterConfig: {
-      instanceType: "t3.medium.elasticsearch",
-      instanceCount: 2,
-      zoneAwarenessEnabled: true,
-      zoneAwarenessConfig: {
-        availabilityZoneCount: 2
-      }
-    },
-    vpcOptions: {
-      subnetIds: [vpc.subnets.private[0].id, vpc.subnets.private[1].id],
-      securityGroupIds: [vpc.vpc.defaultSecurityGroupId]
-    },
-    ebsOptions: {
-      ebsEnabled: true,
-      volumeSize: 10,
-      volumeType: "gp2"
-    },
-    advancedOptions: {
-      "rest.action.multi.allow_explicit_index": "true"
-    },
-    snapshotOptions: {
-      automatedSnapshotStartHour: 23
+this.domain = new aws.elasticsearch.Domain(domainName, {
+  elasticsearchVersion: "7.7",
+  clusterConfig: {
+    instanceType: "t3.medium.elasticsearch",
+    instanceCount: 2,
+    zoneAwarenessEnabled: true,
+    zoneAwarenessConfig: {
+      availabilityZoneCount: 2
     }
+  },
+  vpcOptions: {
+    subnetIds: [vpc.subnets.private[0].id, vpc.subnets.private[1].id],
+    securityGroupIds: [vpc.vpc.defaultSecurityGroupId]
+  },
+  ebsOptions: {
+    ebsEnabled: true,
+    volumeSize: 10,
+    volumeType: "gp2"
+  },
+  advancedOptions: {
+    "rest.action.multi.allow_explicit_index": "true"
+  },
+  snapshotOptions: {
+    automatedSnapshotStartHour: 23
   }
-);
+});
 ```
 
 ### Optionally, Mark Mission Critical Resources as Protected
@@ -75,13 +72,13 @@ In order to prevent accidental deletions of mission critical cloud infrastructur
 Learn more about the `protect` property in the [official Pulumi documentation](https://www.pulumi.com/docs/intro/concepts/resources/#protect).
 :::
 
-For the [`prod`](https://github.com/webiny/webiny-js/tree/next/packages/cwp-template-aws/template/api/pulumi/prod) setup of your **API** project application's cloud infrastructure, projects created with Webiny version `5.0.1` and higher, will have the following cloud infrastructure resources marked as protected:
+For the [`prod`](https://github.com/webiny/webiny-js/tree/next/packages/cwp-template-aws/template/api/pulumi/prod) setup of your **API** project application's cloud infrastructure, projects created with Webiny version `5.1.0` and higher, will have the following cloud infrastructure resources marked as protected:
 
 - [Default](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/dynamoDb.ts#L27) and [ElasticSearch DynamoDB](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/elasticSearch.ts#L84) tables
 - [ElasticSearch cluster](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/elasticSearch.ts#L84)
 - [File Manager's S3 Bucket](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/fileManager.ts#L35)
 
-For projects created before Webiny version `5.0.1`, these need to be added manually.
+For projects created before Webiny version `5.1.0`, these need to be added manually.
 
 To do that, start by adding the `protectedEnvironment` variable, and passing its value to `DynamoDB`, `Cognito`, `ElasticSearch`, and `FileManager` classes, in your [`api/pulumi/prod/index.ts:12`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/index.ts#L12-L24) file:
 
@@ -110,3 +107,92 @@ Once you have that in place, make sure to pass the value of `protectedEnvironmen
 :::info
 For more information and code changes, you can check the relevant [pull-request](https://github.com/webiny/webiny-js/pull/1500).
 :::
+
+## Add Support for ~ in Imports
+
+If you're developing your custom packages, you'll soon run into ugly import paths like `../../../../../types`, etc. To mitigate this, make the following changes in your project:
+
+- add `babel-plugin-module-resolver` plugin to `.babel.node.js`:
+
+```js title=".babel.node.js" {5-12}
+module.exports = {
+  // ... existing presets
+  plugins: [
+    // ... existing plugins
+    [
+      "babel-plugin-module-resolver",
+      {
+        alias: {
+          "~": "./src"
+        }
+      }
+    ]
+  ]
+};
+```
+
+- add `babel-plugin-module-resolver` plugin to `.babel.react.js`:
+
+```js title=".babel.react.js" {5-12}
+module.exports = {
+  // ...existing presets
+  plugins: [
+    // ... existing plugins
+    [
+      "babel-plugin-module-resolver",
+      {
+        alias: {
+          "~": "./src"
+        }
+      }
+    ]
+  ]
+};
+```
+
+- add a `moduleNameMapper` config parameter to `jest.config.base.js`:
+
+```js title="jest.config.base.js" {14-16}
+// ... imports
+module.exports = ({ path }, presets = []) => {
+  const name = basename(path);
+  return merge.recursive({}, tsPreset, ...presets, {
+    name: name,
+    displayName: name,
+    modulePaths: [`${path}/src`],
+    testMatch: [`${path}/__tests__/**/*.test.[jt]s?(x)`],
+    transform: {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    moduleDirectories: ["node_modules"],
+    moduleFileExtensions: ["ts", "js", "tsx"],
+    moduleNameMapper: {
+      "~/(.*)": `${path}/src/$1`
+    },
+    modulePathIgnorePatterns: [],
+    globals: {
+      WEBINY_VERSION: version,
+      "ts-jest": {
+        isolatedModules: true,
+        babelConfig: `${path}/.babelrc.js`,
+        diagnostics: false
+      }
+    }
+  });
+};
+```
+
+In case you already have custom packages, you will also need to update their `tsconfig.build.json` and `tsconfig.json` files, by adding the following parameters to them:
+
+```json
+{
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["./src/*"]
+    }
+  }
+}
+```
+
+Now you can use `~` to have nice, clean import paths in your packages, and Jest tests. `~` will always point to your packages' `src` folder. 
